--- a/templates/libro/listar_autor.html
+++ b/templates/libro/listar_autor.html
@@ -28,7 +28,10 @@ Listado de  Autores
         <td>{{autor.nacionalidad}}</td>
         <td>{{autor.descripcion}}</td>
         <td>
-          <a href="{% url 'editar_autor' autor.id %}">Editar</a>
+          <a href="{% url 'libro:editar_autor' autor.id %}">Editar</a>
+          <a href="{% url 'eliminar_autor' autor.id %}">Eliminar</a>
+
+
         </td>
       </tr>
     {% endfor %}
