--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,20 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title>{% block title %}Index{% endblock %}</title>
-  {% block extracss %}
-  {% endblock %}
 </head>
 <body>
   {% block body %}
   <h1>Este es el index de mi proyecto</h1>
-  {% endblock %}
 
-  {% block extrajs %}
+    </div>
+        <!-- Footer -->
+        {% include 'footer.html' %}
+    </div>
   {% endblock %}
 </body>
 </html>
