--- a/templates/libro/crear_autor.html
+++ b/templates/libro/crear_autor.html
@@ -4,7 +4,7 @@
 {% endblock %}
 <body>
   {% block body %}
-  <form method="POST">
+  <form method="POST" style="margin-top: 30px; margin-left: 30px;">
     {% csrf_token %}
     {% if error %}
       <h2>{{error}}</h2>
