acomodo de las tablas

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,24 @@
-  <footer class="main-footer">
-    <!-- To the right -->
-    <div class="float-right d-none d-sm-inline">
-        
+<footer class="bg-dark text-light py-2 mt-auto">
+  <div class="container text-center">
+    <div class="row align-items-center">
+      <!-- Sección de información -->
+      <div class="col-md-4">
+        <h5>Acerca de</h5>
+        <p class="small">Proyecto desarrollado por Breynner Perez.</p>
+      </div>
+      <!-- Sección de redes sociales -->
+      <div class="col-md-4">
+        <h5>Sígueme</h5>
+        <a href="https://www.facebook.com/profile.php?id=61565427186078" class="text-light me-2"><i class="bi bi-facebook"></i></a>
+        <a href="https://x.com/Alexand3rDev" class="text-light me-2"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.instagram.com/alexand3r.dev/" class="text-light"><i class="bi bi-instagram"></i></a>
+      </div>
     </div>
-    <!-- Default to the left -->
-    <strong>Copyright &copy; 2025 Breynner Perez.</strong> All rights reserved.
+    <hr class="border-light my-1">
+    <p class="small mb-0">&copy; 2025 Breynner Perez. Todos los derechos reservados.</p>
+  </div>
 </footer>
+
+
+<!-- Enlace a Bootstrap Icons -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
