--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,17 @@
-html, body {
-  height: 100vh;
+        html, body {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .content {
+            flex: 1;
+        }
+footer p {
+    margin-bottom: 0; /* Evita espacios innecesarios */
+    font-size: 14px; /* Reduce el tamaño del texto */
+}
+
+footer h5 {
+    font-size: 16px; /* Tamaño más compacto */
+    margin-bottom: 5px; /* Reduce el espacio inferior */
 }
