--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="{% static 'img/libros.png' %}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
     <title>{% block title %}Index{% endblock %}</title>
     <link
@@ -17,16 +20,21 @@
   </head>
   <body>
     {% include 'navbar.html'  %}
-
+    <main>
     {% block body %}
-    <h1>Este es el index de mi proyecto</h1>
-
+    <div class="d-flex justify-content-center">
+  <h1>Este es el index de mi proyecto</h1>
+</div>
     {% endblock %}
+    </main>
     <div style="position: fixed; bottom: 0; text-align: center; width: 100%">
       <!-- Footer -->
       {% include 'footer.html' %}
     </div>
     <script src="{% static 'lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'lib/bootstrap-5.3.3-dist/js/bootstrap.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   </body>
 </html>
