--- a/templates/libro/eliminar_autor.html
+++ b/templates/libro/eliminar_autor.html
@@ -7,8 +7,8 @@
   <form method="POST">
     {% csrf_token %}
     <h2>¿Deseas eliminar el registro {{autor.nombre}}?</h2>
-    <button type="submit">Eliminar</button>
-    <a href="{% url 'libro:listar_autor' %}">Cancelar</a>
+    <button type="submit" class="btn btn-danger">Eliminar</button>
+    <a href="{% url 'libro:listar_autor' %}" class="btn btn-secondary">Cancelar</a>
   </form>
   {% endblock %}
   </body>
